--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
 		</dependency>
 		<!--retry dependency-->
 		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-spring-boot2</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.retry</groupId>
 			<artifactId>spring-retry</artifactId>
 			<version>1.3.1</version>
